--- a/SHITAKE/templete/Makefile
+++ b/SHITAKE/templete/Makefile
@@ -13,7 +13,9 @@ USER_LIB = nxtway_gs_balancer
 # User application source
 TARGET_SOURCES := \
 	balancer_param.c \
+	MoveDistance.c \
 	sample133.c
+
 
 TOPPERS_OSEK_OIL_SOURCE := ./prog.oil
 
