--- a/SHITAKE/templete/Makefile
+++ b/SHITAKE/templete/Makefile
@@ -1,5 +1,5 @@
 # Target specific macros
-TARGET = sample
+TARGET = SHITAKE
 
 NXTOSEK_ROOT = /cygdrive/c/cygwin/nxtOSEK
 
@@ -13,6 +13,7 @@ USER_LIB = nxtway_gs_balancer
 # User application source
 TARGET_SOURCES := \
 	balancer_param.c \
+	logSend.c \
 	sample133.c
 
 TOPPERS_OSEK_OIL_SOURCE := ./prog.oil
