--- a/SHITAKE/templete/templete.vcxproj
+++ b/SHITAKE/templete/templete.vcxproj
@@ -54,9 +54,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="balancer_param.c" />
+    <ClCompile Include="logSend.c" />
     <ClCompile Include="sample133.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="logSend.h" />
     <ClInclude Include="sample133.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
