--- a/SHITAKE/templete/Makefile
+++ b/SHITAKE/templete/Makefile
@@ -14,7 +14,9 @@ USER_LIB = nxtway_gs_balancer
 TARGET_SOURCES := \
 	balancer_param.c \
 	MoveDistance.c \
-	sample133.c \
+	MoveDistanceTest.c \
+
+	#sample133.c \
 
 TOPPERS_OSEK_OIL_SOURCE := ./prog.oil
 
