--- a/SHITAKE/templete/templete.vcxproj.filters
+++ b/SHITAKE/templete/templete.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="MoveDistance.c">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="MoveDistanceTest.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sample133.h">
