--- a/SHITAKE/templete/templete.vcxproj
+++ b/SHITAKE/templete/templete.vcxproj
@@ -53,13 +53,19 @@
     <None Include="readme.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BalancerUnit.c" />
     <ClCompile Include="balancer_param.c" />
     <ClCompile Include="logSend.c" />
     <ClCompile Include="sample133.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BalancerUnit.h" />
     <ClInclude Include="logSend.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="sample133.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="shitake.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
