--- a/SHITAKE/templete/templete.vcxproj
+++ b/SHITAKE/templete/templete.vcxproj
@@ -56,11 +56,14 @@
     <ClCompile Include="BalancerUnit.c" />
     <ClCompile Include="balancer_param.c" />
     <ClCompile Include="logSend.c" />
+    <ClCompile Include="MoveDistance.c" />
+    <ClCompile Include="MoveDistanceTest.c" />
     <ClCompile Include="sample133.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BalancerUnit.h" />
     <ClInclude Include="logSend.h" />
+    <ClInclude Include="MoveDistance.h" />
     <ClInclude Include="sample133.h" />
   </ItemGroup>
   <ItemGroup>
