--- a/SHITAKE/templete/templete.vcxproj.filters
+++ b/SHITAKE/templete/templete.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClCompile Include="BalancerUnit.c">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="MoveDistance.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="MoveDistanceTest.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="logSend.h">
@@ -51,6 +57,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="BalancerUnit.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="MoveDistance.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
