--- a/SHITAKE/templete/templete.vcxproj
+++ b/SHITAKE/templete/templete.vcxproj
@@ -54,15 +54,21 @@
   <ItemGroup>
     <ClCompile Include="balancer_param.c" />
     <ClCompile Include="Calibration.c" />
+    <ClCompile Include="logSend.c" />
     <ClCompile Include="MoveDistance.c" />
     <ClCompile Include="MoveDistanceTest.c" />
+    <ClCompile Include="mymath.c" />
     <ClCompile Include="sample133.c" />
+    <ClCompile Include="SelfLocation.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Calibration.h" />
     <ClInclude Include="factory.h" />
+    <ClInclude Include="logSend.h" />
     <ClInclude Include="MoveDistance.h" />
+    <ClInclude Include="mymath.h" />
     <ClInclude Include="sample133.h" />
+    <ClInclude Include="SelfLocation.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
