--- a/SHITAKE/templete/templete.vcxproj
+++ b/SHITAKE/templete/templete.vcxproj
@@ -54,19 +54,23 @@
   <ItemGroup>
     <ClCompile Include="balancer_param.c" />
     <ClCompile Include="Calibration.c" />
+    <ClCompile Include="LightSensorLPF.c" />
     <ClCompile Include="logSend.c" />
     <ClCompile Include="MoveDistance.c" />
     <ClCompile Include="MoveDistanceTest.c" />
     <ClCompile Include="mymath.c" />
+    <ClCompile Include="PID_controll.c" />
     <ClCompile Include="sample133.c" />
     <ClCompile Include="SelfLocation.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Calibration.h" />
     <ClInclude Include="factory.h" />
+    <ClInclude Include="LightSensorLPF.h" />
     <ClInclude Include="logSend.h" />
     <ClInclude Include="MoveDistance.h" />
     <ClInclude Include="mymath.h" />
+    <ClInclude Include="PID_controll.h" />
     <ClInclude Include="sample133.h" />
     <ClInclude Include="SelfLocation.h" />
   </ItemGroup>
