--- a/SHITAKE/templete/templete.vcxproj.filters
+++ b/SHITAKE/templete/templete.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="logSend.c">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Section.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Calibration.h">
@@ -75,6 +78,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="logSend.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Section.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
