--- a/SHITAKE/templete/templete.vcxproj.filters
+++ b/SHITAKE/templete/templete.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="PIDControl.c">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="BrightnessLPF.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Calibration.h">
@@ -93,6 +96,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="PIDControl.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="BrightnessLPF.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
