--- a/Strange_Lovers/Strange_Lovers.vcxproj.filters
+++ b/Strange_Lovers/Strange_Lovers.vcxproj.filters
@@ -38,6 +38,12 @@
     <ClCompile Include="RN_State.c">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="PID_Brightness.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Target_Value.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Runner.h">
@@ -47,6 +53,12 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="RN_State.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="PID_Brightness.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Target_Value.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
